--- a/AcquaSense React/src/pages/login/login.css
+++ b/AcquaSense React/src/pages/login/login.css
@@ -104,28 +104,15 @@ h1 a {
   color: #333;
 }
 
-/* Button animations */
 .acqua-action-button {
-  width: 80%; /* Ajustado para melhor aparência */
-  padding: 8px;
+  width: 100%;
+  padding: 12px;
   border: none;
   border-radius: 30px;
   font-weight: 600;
   cursor: pointer;
   margin-top: 10px;
   text-transform: uppercase;
-  font-size: 0.85rem;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.acqua-action-button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.acqua-action-button:active {
-  transform: translateY(1px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
 }
 
 .acqua-solid-button {
@@ -152,16 +139,8 @@ h1 a {
   color: #aaa;
   font-size: 0.9rem;
   text-align: center;
-  margin-top: 15px;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-.acqua-forgot-password-link:hover {
-  color: #333;
-  text-decoration: underline;
-}
-
+  margin-top: 10px;
+}/*                */
 .acqua-info-panel img {
   width: 40%;
   margin-top: 20px;
