--- a/AcquaSense React/src/components/AcquaNav/Header.css
+++ b/AcquaSense React/src/components/AcquaNav/Header.css
@@ -647,3 +647,37 @@ body {
     margin-left: 0; /* Remove o espaço quando a sidebar está oculta */
   }
 }
+
+
+/* Esconder sidebar em telas menores */
+@media (max-width: 768px) {
+  .dashboard-sidebar {
+      width: 0;
+      padding: 0;
+      overflow: hidden;
+  }
+  .dashboard-main-content {
+      margin-left: 0;
+  }
+}
+
+/* Estilo para o botão de alternância da sidebar */
+.toggle-sidebar-button {
+  display: none; /* Esconde o botão em telas grandes */
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  z-index: 1100;
+  background-color: var(--header-bg-color);
+  color: var(--text-color);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .toggle-sidebar-button {
+      display: block;
+  }
+}
