--- a/AcquaSense React/src/pages/login/login.css
+++ b/AcquaSense React/src/pages/login/login.css
@@ -106,9 +106,9 @@ h1 a {
 
 .acqua-action-button {
   width: 100%;
-  padding: 12px;
+  padding: 6px 12px;
   border: none;
-  border-radius: 30px;
+  border-radius: 20px;
   font-weight: 600;
   cursor: pointer;
   margin-top: 10px;
