--- a/AcquaSense React/src/components/Dashboard/Dash.css
+++ b/AcquaSense React/src/components/Dashboard/Dash.css
@@ -95,7 +95,7 @@ body {
     background-color: var(--news-card-bg-color);
 }
 
-.card.news button {
+.card button {
     background-color: var(--news-button-bg-color);
     color: #fff;
     border: none;
@@ -104,7 +104,7 @@ body {
     cursor: pointer;
 }
 
-.card.news button:hover {
+.card button:hover {
     background-color: var(--news-button-hover-bg-color);
 }
 
@@ -130,7 +130,7 @@ body {
         font-size: 14px;
     }
 
-    .card.news button {
+    .card button {
         padding: 8px 16px;
         font-size: 14px;
     }
@@ -158,7 +158,7 @@ body {
         font-size: 12px;
     }
 
-    .card.news button {
+    .card button {
         padding: 6px 12px;
         font-size: 12px;
     }
