--- a/AcquaSense React/src/pages/DashBoard/DashHome.css
+++ b/AcquaSense React/src/pages/DashBoard/DashHome.css
@@ -7,6 +7,7 @@
 
 /* Barra lateral */
 .dashboard-sidebar {
+  height: 100vh;
   width: 250px;
   transition: all 0.3s ease; /* Suaviza a transição */
 }
