Casos de testes

--- a/AcquaSense React/src/components/AcquaNav/log.html
+++ b/AcquaSense React/src/components/AcquaNav/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,4859],[],[[4,0,5,[],[0,221,4637,6],[[0,7,8,0,9,10,0,0,[1,222,4524],[[223,2,11]]],[0,12,8,0,13,14,0,0,[0,4746,110],[[4747,2,15],[4854,2,16],[4854,5,6]]],[0,17,8,0,18,19,0,0,[3,4856,0],[]],[0,20,21,0,22,23,0,0,[3,4857,0],[]],[0,12,8,0,13,14,0,0,[3,4857,0],[]],[0,24,8,0,25,19,0,0,[3,4857,0],[]],[0,20,21,0,22,26,0,0,[3,4858,0],[]],[0,27,8,0,28,0,0,0,[3,4858,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16050],[],[[4,0,0,[],[1,316,15735],[[0,5,0,0,0,6,0,0,[1,318,4635],[[0,7,0,0,0,8,0,0,[1,319,4634],[[0,9,10,0,11,12,0,0,[1,319,4017],[[319,2,13]]],[0,14,10,0,15,0,0,0,[1,4336,72],[]],[0,16,10,0,17,0,0,0,[1,4409,544],[[4953,2,18]]]]]]],[0,19,0,0,0,20,0,0,[1,4954,60],[[0,21,0,0,0,22,0,0,[1,4955,59],[[0,23,10,0,24,22,0,0,[1,4955,59],[[4956,2,25]]]]]]],[0,26,27,0,28,29,0,0,[1,5013,5002],[[10015,2,30]]],[0,16,10,0,17,0,0,0,[1,10018,552],[[10568,2,31]]],[0,32,0,0,0,33,0,0,[1,10571,81],[[0,21,0,0,0,22,0,0,[1,10574,78],[[0,23,10,0,24,22,0,0,[1,10575,76],[[10576,2,34]]]]]]],[0,26,27,0,28,29,0,0,[1,10652,5003],[[15655,2,30]]],[0,16,10,0,17,0,0,0,[1,15656,393],[[16050,2,35]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestThemeToggle","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\AcquaNav\\TestThemeToggle.robot","*TestThemeToggle.robot","*Switch Between Dark Mode and Light Mode","*<p>Teste de alternância entre modo escuro e modo claro na página inicial\x3c/p>","*Button with locator 'xpath=//button[contains(@class, 'theme-toggle')]' not found.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:3000/Dashboard\">http://localhost:3000/Dashboard\x3c/a>'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//button[contains(@class, 'theme-toggle')]","*Clicking button 'xpath=//button[contains(@class, 'theme-toggle')]'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-4.png\"><img src=\"selenium-screenshot-4.png\" width=\"800px\">\x3c/a>","*Wait Until Element Contains","*<p>Waits until the element <code>locator\x3c/code> contains <code>text\x3c/code>.\x3c/p>","*xpath=//body    dark-mode","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*Modo escuro ativado com sucesso","*Wait Until Element Does Not Contain","*<p>Waits until the element <code>locator\x3c/code> does not contain <code>text\x3c/code>.\x3c/p>","*Modo claro ativado com sucesso","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestThemeToggle","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\AcquaNav\\TestThemeToggle.robot","*TestThemeToggle.robot","*Teste Alternar Tema","*Given que estou na tela principal","*${tema.url_acqua}","*Acessar sistema","*${url}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-4.png\"><img src=\"selenium-screenshot-4.png\" width=\"800px\">\x3c/a>","*When clico para ativar o modo escuro","*${tema.btn_escuro}","*Realizar clique","*${locator}","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '//button[contains(.,'Modo Escuro')]'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-5.png\"><img src=\"selenium-screenshot-5.png\" width=\"800px\">\x3c/a>","*When clico para ativar o modo claro","*${tema.btn_claro}","*Clicking element '//button[contains(.,'Modo Claro')]'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-6.png\"><img src=\"selenium-screenshot-6.png\" width=\"800px\">\x3c/a>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:05","fail":1,"id":"s1","label":"TestThemeToggle","name":"TestThemeToggle","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"TestThemeToggle","name":"TestThemeToggle","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731445887330;
+window.output["baseMillis"] = 1731710800321;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4876;
+window.output["generated"] = 16080;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
