--- a/AcquaSense React/src/components/Notification/Notirobot/report.html
+++ b/AcquaSense React/src/components/Notification/Notirobot/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16050],[],[[4,0,0,[],[1,316,15735],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8921],[],[[4,0,0,[],[1,300,8620],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestThemeToggle","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\AcquaNav\\TestThemeToggle.robot","*TestThemeToggle.robot","*Teste Alternar Tema"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Noti Robot","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\Notification\\Notirobot\\noti_robot.robot","*noti_robot.robot","*Teste de Acesso à Rota Notificação Sem Login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"TestThemeToggle","name":"TestThemeToggle","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Noti Robot","name":"Noti Robot","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731710800321;
+window.output["baseMillis"] = 1731713316589;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16080;
+window.output["generated"] = 8968;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
